--- a/amigopet-backend/amigopet/src/main/resources/application.properties
+++ b/amigopet-backend/amigopet/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-
-
 # JPA
 spring.jpa.show-sql=true
 
@@ -7,9 +5,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/amigopet?serverTimezone=UTC
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
-spring.datasource.username=root
+spring.datasource.username=
 
-spring.datasource.password=root
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto = update
 
