--- a/amigopet-backend/src/main/resources/application.properties
+++ b/amigopet-backend/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/amigopet?serverTimezone=UTC
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
-spring.datasource.username=
+spring.datasource.username=root
 
-spring.datasource.password=
+spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto = update
 
