--- a/amigopet-backend/pom.xml
+++ b/amigopet-backend/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>br.com.amigopet</groupId>
 	<artifactId>amigopet</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>amigopet</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
