--- a/amigopet-frontend/package.json
+++ b/amigopet-frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "amigo-pet",
-  "version": "0.0.0",
+  "name": "amigopet",
+  "version": "1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
